# easyuq

./: README.md  easyuq_example.ipynb
ML_example/: README.md  experiment.py  functions_easyuq.py  net_easyuq.py
ML_example/UCI_Datasets/bostonHousing/data/: batch_sizes.txt  reg_values.txt
ML_example/UCI_Datasets/bostonHousing/results/: log_1_xepochs_1_hidden_layers.txt  test_batch_1_xepochs_1_hidden_layers.txt  test_bw_1_xepochs_1_hidden_layers.txt  test_crpsidr_1_xepochs_1_hidden_layers.txt  test_crpss_1_xepochs_1_hidden_layers.txt  test_df_1_xepochs_1_hidden_layers.txt  test_ll_1_xepochs_1_hidden_layers.txt  (+1 more)
ML_example/deep_ens/: README.md  experiment.py  net_ensemble.py
Simulation_example/: easyuq_example.ipynb  helper_functions.py
Weather_example/: README.md  helper_functions.py  weather_example.ipynb
Weather_example/Precipitation/: crps_functions.py  helper_functions.py  precip_example.ipynb
Weather_example/Precipitation/data/: fra_lead_1.txt  fra_lead_4.txt
Weather_example/WeatherBench/: cp_on_gpu.py  crps_functions.py  helper_functions.py  weather_example.ipynb
Weather_example/WeatherBench/data/: cnn_fct_test.nc  cnn_fct_train.nc  cnn_obs_test.nc  cnn_obs_train.nc
Weather_example/cpp_funcs_crps/: CMakeLists.txt  README.md  crps_scores.cpp
Weather_example/data/: README.md  fct_test_cnn_lead72_subset.nc  fct_train_cnn_lead72_subset.nc  obs_test_cnn_lead72_subset.nc  obs_train_cnn_lead72_subset.nc
Weather_example/precipitation/: precip_example.ipynb
Weather_example/precipitation/data/: fra_lead_2.txt  fra_lead_3.txt  fra_lead_5.txt
(+108 files in other folders)
